--- a/1-Natours/sass/base/_utilities.scss
+++ b/1-Natours/sass/base/_utilities.scss
@@ -6,3 +6,5 @@
 .u-margin-bottom-medium { margin-bottom: 4rem; }
 .u-margin-bottom-big { margin-bottom: 8rem; }
 
+.u-margin-top-big { margin-top: 8rem; }
+.u-margin-top-big { margin-top: 10rem; }
